--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TS Refresher</title>
   <script src="app.js" defer></script>
+  <script src="analitics.js" defer></script>
 </head>
 
 <body>
