--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TS Refresher</title>
-  <script src="app.js" defer></script>
-  <script src="analitics.js" defer></script>
+  <script src="./dist/app.js" defer></script>
+  <script src="./dist/analitics.js" defer></script>
 </head>
 
 <body>
-
+  <button>Click Me</button>
 </body>
 
 </html>
