--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TS Refresher</title>
   <script src="./dist/app.js" defer></script>
+  <script src="./dist/next-gen.js" defer></script>
   <script src="./dist/analitics.js" defer></script>
 </head>
 
